===== 0.7.15 (??? ??, 2010) =====
* Ukrainian localization (by Dmytro Shevchenko) has been added

===== 0.7.14 (Nov 03, 2010) =====
* Ukrainian hyphenations have been fixed
* Czech resources have been updated

===== 0.7.13 (Oct 28, 2010) =====
* Keys backlight is now disabled during reading
* Czech resources have been updated

===== 0.7.12 (Oct 28, 2010) =====
* Filemanager associations have been fixed

===== 0.7.11 (Oct 24, 2010) =====
* Several crashes have been fixed

===== 0.7.10 (Oct 24, 2010) =====
===== 0.7.9 (Oct 24, 2010) =====
* List of styles has been fixed in the Options dialog
* Monospace font has been included in the fonts list
* Keypressings are handled in the synchronous mode

===== 0.7.8 (Oct 10, 2010) =====
* Processing of large OPDS feeds (> 500 books in one file) has been fixed
* Network library doesn't throw an Exception if an SD card is unavailable
* Internal change: Error messaging system in network library has been rewritten using excpetions
* Better error processing for litres e-book catalog

===== 0.7.7 (Oct 06, 2010) =====
* Text rotation has been implemented

===== 0.7.6 (Oct 05, 2010) =====
* Application icon with better resolution has been added
* Czech localization (by Marek Pavelka) has been added
* Loading of large catalogs (e.g., Manybooks->Authors->L) has been fixed
* Default e-mail will be used during registration at litres

===== 0.7.5 (Sep 22, 2010) =====

* Text rotation has been implemented
* Mistyping in Russian help has been fixed
* On-fly language change has been implemented

===== 0.7.4 (Sep 20, 2010) =====

* EMPTY-LINE tag in fb2 files is now supported
* better support for STANZA tag in fb2
* EStrong File Explorer can be used to open fb2/epub files in FBReader
* French resources have been updated

===== 0.7.3 (Sep 15, 2010) =====

* Sporadic program openings during internet browsing has been fixed
* Minor bugfixes

===== 0.7.1/2 (Sep 13, 2010) =====
